<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:padding="8dp"
            android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/punctuality_rating_text"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_margin="12dp"
                    android:layout_weight="3" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.0"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/tv_lecturer_punctuality_rating"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:padding="8dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fluency_rating_text"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_margin="12dp"
                android:layout_weight="3"/>


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.0"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/tv_lecturer_fluency_rating"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:padding="8dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/engagement_rating_text"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_margin="12dp"
                android:layout_weight="3" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.0"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/tv_lecturer_engagement_rating"/>

            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:padding="8dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tech_tips_rating_text"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_margin="12dp"
                android:layout_weight="3" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.0"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-medium"
                    android:id="@+id/tv_lecturer_tech_tips_rating"/>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>